--- a/assets/lib/style.css
+++ b/assets/lib/style.css
@@ -1,3 +1,14 @@
+html,body{
+  height: 100%;
+  font-family: 'Ubuntu', sans-serif;
+}
+.bg-img{
+  background: linear-gradient(rgba(225,225,225,.45), rgba(225,225,225,.45)),url(../images/home_bg.jpg);
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 a{
   text-decoration:none;
   color:black;
@@ -5,9 +16,6 @@ a{
 a:hover{
   text-decoration: none;
   color:black;
-}
-body{
-  font-family: 'Ubuntu', sans-serif;
 }
 .f-ub{
     font-family: 'Ubuntu', sans-serif;
@@ -82,13 +90,11 @@ body{
     width:100%;
     text-align: center;
 }
-.sd:hover {
+.sd2:hover {
     box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.2), 0 0px 10px 0 rgba(0, 0, 0, 0.19);
     transition: box-shadow 0.3s ease-in-out;
     transform: scale(0.95, 0.95);
 }
 .sd {
-    box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.2), 0px 0px 2px 0 rgba(0, 0, 0, 0.19);
-    border: 0px;
-    position: relative;
+    box-shadow: 1px 5px 3px 0 rgba(0, 0, 0, 0.2), 1px 5px 3px 0 rgba(0, 0, 0, 0.19);
 }
