--- a/assets/lib/style.css
+++ b/assets/lib/style.css
@@ -4,7 +4,7 @@ html,body{
 }
 .bg-img{
   background: linear-gradient(rgba(140,140,140,.45), rgba(140,140,140,.45)),url(../images/home_bg.jpg);
-  height: 100%;
+  height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
