--- a/assets/lib/style.css
+++ b/assets/lib/style.css
@@ -11,11 +11,8 @@ html,body{
 }
 .bg-img2{
   background: linear-gradient(rgba(130, 130, 130, 0.4), rgba(130, 130, 130, 0.4)),url(../images/bg3.png);
-}
-@media screen and (min-width: 768px) {
-  .bg-img2{
-    height: 100vh;
-   }
+  height: 100%;
+  overflow-y: auto;
 }
 a{
   text-decoration:none;
