--- a/assets/lib/style.css
+++ b/assets/lib/style.css
@@ -187,3 +187,9 @@ a:hover{
     font-size: 12px;
   }
 }
+/*--------------------my trip ---------------*/
+.table td, .table th {
+    padding: 0px;
+    vertical-align: top;
+    border-top: none;
+}
